[tool.poetry]
name_placeholder = "FIXME"
version = "0.1.0"
description = "Placeholder description from my git template"
authors = ["Sean Monahan <1907654+seancmonahan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
mypy = "^0.782"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
